--- a/app/src/main/res/layout/history_raw.xml
+++ b/app/src/main/res/layout/history_raw.xml
@@ -72,40 +72,40 @@
 
         </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="32dp"
-            android:layout_height="100dp"
-            android:layout_weight="3"
-            android:background="#d5d5d5"
-            tools:ignore="NewApi"
-            android:focusable="false"
-            android:focusableInTouchMode="false">
+        <!--<LinearLayout-->
+            <!--android:layout_width="32dp"-->
+            <!--android:layout_height="100dp"-->
+            <!--android:layout_weight="3"-->
+            <!--android:background="#d5d5d5"-->
+            <!--tools:ignore="NewApi"-->
+            <!--android:focusable="false"-->
+            <!--android:focusableInTouchMode="false">-->
 
-            <RelativeLayout
-
-
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:focusable="false"
-                android:focusableInTouchMode="false">
-
-                <CheckBox
-
-                    android:id="@+id/favorite_checkBox"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:layout_centerHorizontal="true"
-                    android:layout_centerVertical="true"
-                    android:button="@drawable/check_box_style_back"
-                    android:checked="false"
-                    android:focusable="false"
-                    android:focusableInTouchMode="false"
-                    android:descendantFocusability="blocksDescendants"/>
-
-            </RelativeLayout>
+            <!--<RelativeLayout-->
 
 
-        </LinearLayout>
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="match_parent"-->
+                <!--android:focusable="false"-->
+                <!--android:focusableInTouchMode="false">-->
+
+                <!--<CheckBox-->
+
+                    <!--android:id="@+id/favorite_checkBox"-->
+                    <!--android:layout_width="40dp"-->
+                    <!--android:layout_height="40dp"-->
+                    <!--android:layout_centerHorizontal="true"-->
+                    <!--android:layout_centerVertical="true"-->
+                    <!--android:button="@drawable/check_box_style_back"-->
+                    <!--android:checked="false"-->
+                    <!--android:focusable="false"-->
+                    <!--android:focusableInTouchMode="false"-->
+                    <!--android:descendantFocusability="blocksDescendants"/>-->
+
+            <!--</RelativeLayout>-->
+
+
+        <!--</LinearLayout>-->
 
     </LinearLayout>
 
