--- a/app/src/main/res/layout/delete_dialog.xml
+++ b/app/src/main/res/layout/delete_dialog.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="wrap_content"
     android:layout_gravity="center_horizontal"
@@ -29,10 +30,10 @@
             android:orientation="horizontal"
             android:weightSum="100">
 
-            <TextView
+            <Space
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="                        "
+                tools:ignore="NewApi"
                 android:layout_weight="40"/>
 
             <Button
@@ -41,7 +42,7 @@
                 android:layout_height="match_parent"
                 android:textColor="#FA5551"
                 android:id="@+id/cancel"
-                android:text="Cancel"
+                android:text="CANCEL"
                 android:layout_weight="30"
                 />
 
